...
            android:textSize="@dimen/header_font_size"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"/>

        <Button
            android:id="@+id/show_joke_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructions_text_view"
            android:onClick="tellJoke"
            android:text="@string/button_text"
            android:padding="@dimen/default_padding"
...
